--- a/project/footer.html
+++ b/project/footer.html
@@ -63,27 +63,27 @@
                     </dl>
                     <dl class="footer__help-wrap footer__help-wrap--consult">
                         <a href="https://talk.naver.com/ct/wcb8l5" title="새창" class="footer__help-link">
-                            <img src="/project/images/톡톡.jpg" width="20" height="20">
+                            <img src="/sub_project/project/images/톡톡.jpg" width="20" height="20">
                             <span class="footer__help--icon"></span>
                             <span class="footer__help--text">톡톡상담</span>
                         </a>
                     </dl>
                     <ul class="footer__sns">
                         <li class="footer__sns-item"><a href="https://blog.naver.com/jobkorea1">
-                            <img src="/project/images/blog.png" width="20", height="20"><span
+                            <img src="/sub_project/project/images/blog.png" width="20", height="20"><span
                                     class="skip">블로그</span></a></li>
                         <li class="footer__sns-item"><a href="https://m.post.naver.com/my.nhn?memberNo=9028903">
-                            <img src="/project/images/post.png" width="20", height="20"><span
+                            <img src="/sub_project/project/images/post.png" width="20", height="20"><span
                                     class="skip">포스트</span></a></li>
                         <li class="footer__sns-item"><a href="https://www.facebook.com/jobkorea">
-                            <img src="/project/images/facebook.png" width="20", height="20"><span
+                            <img src="/sub_project/project/images/facebook.png" width="20", height="20"><span
                                     class="skip">페이스북</span></a></li>
                         <li class="footer__sns-item"><a href="https://www.instagram.com/jobkorea_albamon/">
-                            <img src="/project/images/instagram.png" width="20", height="20"><span
+                            <img src="/sub_project/project/images/instagram.png" width="20", height="20"><span
                                     class="skip">인스타그램</span></a></li>
                         <li class="footer__sns-item"><a
                                 href="https://www.youtube.com/channel/UCOrdY3p46GJh_CYacfwYieg">
-                                <img src="/project/images/youtube.png" width="20", height="20"><span
+                                <img src="/sub_project/project/images/youtube.png" width="20", height="20"><span
                                     class="skip">유튜브</span></a></li>
                     </ul>
                 </div>
