--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -40,10 +40,10 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- <div id="headBenner" class="head_banner">
-                        <a class="bann-wrap" href="#"><img src="/project/onpick/images/onepickHeader.png" width="1240" height="90">
+                    <div id="headBenner" class="head_banner">
+                        <a class="bann-wrap" href="#"><img src="/project/onpick/images/onepickHeader.png">
                             <div class="bann"></div>
-                        </a> -->
+                        </a>
                     </div>
                 </div>
             </div>
