--- a/project/onpick/onpick_nav.html
+++ b/project/onpick/onpick_nav.html
@@ -19,6 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- nav script -->
     <script src="js/onpick_nav.js"></script>
+    <script src="js/onpick_nav2.js"></script>
 </head>
 <body>
     <div class="wrap">
