--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="text/javascript">
+        window.location = "/project/index.html";
+    </script>
 </head>
 <body>
-    <a href=./project/index.html></a>
+    index
 </body>
 </html>
