--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript">
-        window.location = "/project/index.html";
+        window.location = "/sub_project/project/index.html";
     </script>
 </head>
 <body>
