--- a/project/onpick/onpick_header.html
+++ b/project/onpick/onpick_header.html
@@ -28,7 +28,7 @@
                 <div id="topArea">
                     <div class="topContent">
                         <div class="logo">
-                            <a href="#"><img src="/project/images/logo_motion_pc.gif" width="143" height="25"></a>
+                            <a href="#"><img src="./sub_project/project/images/logo_motion_pc.gif" width="143" height="25"></a>
                             <a href="#"><span>이직은 원픽</span></a>
                         </div>
                         <div class="topMenu">
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div id="headBenner" class="head_banner">
-                        <a class="bann-wrap" href="#"><img src="/project/onpick/images/onepickHeader.png">
+                        <a class="bann-wrap" href="#"><img src="./sub_project//project/onpick/images/onepickHeader.png">
                             <div class="bann"></div>
                         </a>
                     </div>
