--- a/project/footer.html
+++ b/project/footer.html
@@ -4,10 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>footer</title>
+    <title>Mainpage footer</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- [5] layout 영역 -->
+    <link rel="stylesheet" href="css/jobkh_layout.css">
+    <!-- [6] header 영역 -->
+    <link rel="stylesheet" href="css/jobkh_header.css">
+    <!-- [7] nav 영역 -->
+    <link rel="stylesheet" href="css/jobkh_nav.css">
+    <!-- [8] main 영역 -->
+    <link rel="stylesheet" href="css/jobkh_main.css">
     <!-- [9] footer 영역 -->
     <link rel="stylesheet" href="css/jobkh_footer.css">
-    <link rel="stylesheet" href="/project/css/reset.css">
+    <!-- swiper css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <!-- 부트스트랩 css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- jQuery 스크립트 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -28,8 +43,9 @@
                         <li><a href="https://www.jobkorea.co.kr/corp/offer/list">헤드헌팅 의뢰</a></li>
                         <li><a href="https://www.jobkorea.co.kr/service/company/learning">기업러닝</a></li>
                     </ul>
-                    <span class="footer__notice_service"><a
-                            href="https://www.jobkorea.co.kr/service/sitemap"><em>더보기</em></a></span>
+                    <span class="footer__notice_service">
+                        <a href="https://www.jobkorea.co.kr/service/sitemap"><em>더보기</em></a>
+                    </span>
                 </div>
 
                 <div class="footer__service">
@@ -91,9 +107,12 @@
                     </div>
                     <div class="footer__company-item footer__company-item--ceo">대표 : 윤현준</div>
                     <div class="footer__company-item footer__company-item--business">
-                        사업자등록번호 : <span>110-81-34859<a
-                                href="javascript:window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=1108134859','bizCommPop','width=1000,height=700;')"
-                                class="business-button">사업자정보 확인 &gt;</a></span>
+                        사업자등록번호 : 
+                        <span>110-81-34859
+                            <a href="javascript:window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=1108134859','bizCommPop','width=1000,height=700;')"
+                                class="business-button">사업자정보 확인 &gt;
+                            </a>
+                        </span>
                     </div>
                     <br />
                     <div class="footer__company-item footer__company-item--report">통신판매업 신고번호 : 2016-서울서초-0287호</div>
